--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "project4",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon ./src/index.ts ",
+    "build": "tsc",
+    "start": "node ./build/index.js"
   },
   "author": "mr",
   "license": "ISC",
@@ -15,6 +18,8 @@
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/express": "^4.17.20",
     "@types/node": "^20.8.9",
     "nodemon": "^3.0.1",
