feat: create migration entity

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "appointment-management",
+  "name": "appointmentmanagement",
   "version": "1.0.0",
   "description": "project4",
   "main": "index.js",
