--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "appointmentmanagement",
+  "name": "appointment-management",
   "version": "1.0.0",
   "description": "project4",
   "main": "index.js",
@@ -12,15 +12,19 @@
   "author": "mr",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "dotenv": "16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.2",
+    "save": "2.9.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
-    "@types/jsonwebtoken": "^9.0.4",
     "@types/express": "^4.17.20",
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "^20.8.9",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
