feat: modified file database

--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
-PORT =
-
-DB_HOST =
-DB_USERNAME = 
-DB_PASSWORD = 
-DB_DATABASE =
-JWT_SECRET = 
+PORT = 'tu_puerto_#entero
+DB_HOST = 'tu_host
+DB_USERNAME = 'tu_username'
+DB_PASSWORD = 'tu_password'
+DB_DATABASE = 'tu_db'
+JWT_SECRET = 'ingresa aquitu secret'
