feat: create controller apointments

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-PORT = 'tu_puerto_#entero
-DB_HOST = 'tu_host
+PORT = 4000
+DB_HOST = 'tu_host'
 DB_USERNAME = 'tu_username'
 DB_PASSWORD = 'tu_password'
 DB_DATABASE = 'tu_db'
