--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT = 4000
-DB_HOST = 'tu_host'
-DB_USERNAME = 'tu_username'
-DB_PASSWORD = 'tu_password'
-DB_DATABASE = 'tu_db'
-JWT_SECRET = 'ingresa aquitu secret'
+DB_HOST = 'your_host'
+DB_USERNAME = 'your_username'
+DB_PASSWORD = 'your_password'
+DB_DATABASE = 'your_db'
+JWT_SECRET = 'your_secret'
