feat: modified controller customer, database, .env

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-PORT = 4000
-DB_HOST = 'your_host'
-DB_USERNAME = 'your_username'
-DB_PASSWORD = 'your_password'
-DB_DATABASE = 'your_db'
-JWT_SECRET = 'your_secret'
+PORT=4000
+DB_HOST=localhost
+DB_USERNAME=root
+DB_PASSWORD=123456789
+DB_DATABASE=tattoo
+JWT_SECRET=GtYOwTmryLAFlkh_mwgPKm6vVizKVkjOA1RRUF32GlI
